--- a/public/css/app.css
+++ b/public/css/app.css
@@ -372,6 +372,11 @@ body.page-signup {
   padding: 3rem 0;
 }
 
+.signup-img {
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
 .navbar {
   position: relative;
   z-index: 15;
