--- a/public/css/app.css
+++ b/public/css/app.css
@@ -372,7 +372,7 @@ body.page-signup {
   padding: 3rem 0;
 }
 
-.signup-img {
+.signup-img, .login-img {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
@@ -688,52 +688,52 @@ main {
   padding: 1rem 2.5rem;
 }
 
-.find-coating-inputs {
+.find-product-inputs {
   display: flex;
   flex-wrap: wrap;
 }
 
-.find-coating-inputs > div {
+.find-product-inputs > div {
   width: 20%;
   padding: 0.25rem;
 }
 
-.btn-find-coating-reset,
-.btn-find-coating-submit {
+.btn-find-product-reset,
+.btn-find-product-submit {
   width: 100%;
   padding: 0.5rem;
   margin: 0.25rem;
   height: 40px;
 }
 
-.coating-items-listing {
+.product-items-listing {
   display: grid;
   grid-template-columns: repeat(4, minmax(0, 1fr));
   gap: 1rem;
 }
 
-.coating-item-title {
+.product-item-title {
   margin: 0.75rem 0;
   font-size: 16px;
 }
 
-.coating-item-price {
+.product-item-price {
   font-weight: 500;
 }
 
-.coating-item-img {
+.product-item-img {
   height: 160px;
   width: 100%;
   object-fit: contain;
 }
 
 
-.coating-item-badge-container {
+.product-item-badge-container {
     display: flex;
     flex-wrap: wrap;
 }
 
-.coating-item-badge {
+.product-item-badge {
     position: relative;
     text-align: center;
     width: 30px;
@@ -743,7 +743,7 @@ main {
     cursor: help;
 }
 
-.coating-item-badge::before, .coating-item-badge::after {
+.product-item-badge::before, .product-item-badge::after {
     --scale: 0;
     --tooltip-color: #272727;
     --arrow-size: 10px;
@@ -756,7 +756,7 @@ main {
     transform-origin: bottom center;
 }
 
-.coating-item-badge::before {
+.product-item-badge::before {
     --translate-y: calc(-100% - var(--arrow-size));
     content: attr(data-tooltip);
     color: #fff;
@@ -766,12 +766,12 @@ main {
     background: var(--tooltip-color);
 }
 
-.coating-item-badge:hover::before,
-.coating-item-badge:hover::after {
+.product-item-badge:hover::before,
+.product-item-badge:hover::after {
     --scale: 1;
 }
 
-.coating-item-badge::after {
+.product-item-badge::after {
     --translate-y: calc(-1.1 * var(--arrow-size));
     content: '';
     width: 0;
@@ -783,39 +783,39 @@ main {
 }
 
 
-.coating-item-badge-2 {
+.product-item-badge-2 {
     background-position-y: -55px;
 }
 
-.coating-item-badge-3 {
+.product-item-badge-3 {
     background-position-y: -113px;
 }
 
-.coating-item-badge-4 {
+.product-item-badge-4 {
     background-position-y: -175px;
 }
 
-.coating-item-badge-5 {
+.product-item-badge-5 {
     background-position-y: -250px;
 }
 
-.coating-item-badge-6 {
+.product-item-badge-6 {
     background-position-y: -314px;
 }
 
-.coating-item-badge-7 {
+.product-item-badge-7 {
     background-position-y: -381px;
 }
 
-.coating-item-badge-8 {
+.product-item-badge-8 {
     background-position-y: -458px;
 }
 
-.coating-item-badge-9 {
+.product-item-badge-9 {
     background-position-y: -528px;
 }
 
-.coating-item-badge-10 {
+.product-item-badge-10 {
     background-position-y: -590px;
 }
 
@@ -1232,6 +1232,14 @@ a.pagination-item:hover {
   font-size: 16px;
 }
 
+.page-signup .social-auth-buttons {
+    margin-top: 1rem;
+}
+
+.page-signup .social-auth-buttons .btn {
+    font-size: 16px;
+}
+
 .login-text-dont-have-account {
   margin-top: 2rem;
   text-align: center;
@@ -1286,15 +1294,15 @@ a.pagination-item:hover {
   }
 }
 
-.search-items-sidebar .find-coating-form {
+.search-items-sidebar .find-product-form {
   flex-direction: column;
 }
 
-.search-items-sidebar .find-coating-inputs {
+.search-items-sidebar .find-product-inputs {
   flex-direction: column;
 }
 
-.search-items-sidebar .find-coating-inputs > div {
+.search-items-sidebar .find-product-inputs > div {
   width: 100%;
 }
 
@@ -1302,7 +1310,7 @@ a.pagination-item:hover {
   flex: 1;
 }
 
-.search-items-results .coating-items-listing {
+.search-items-results .product-items-listing {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
@@ -1314,13 +1322,13 @@ a.pagination-item:hover {
 }
 
 @media screen and (max-width: 1200px) {
-  .search-items-results .coating-items-listing {
+  .search-items-results .product-items-listing {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
 @media screen and (max-width: 992px) {
-  .coating-items-listing {
+  .product-items-listing {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
@@ -1419,7 +1427,7 @@ a.pagination-item:hover {
     display: flex;
   }
 
-  .search-items-results .coating-items-listing {
+  .search-items-results .product-items-listing {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
@@ -1487,29 +1495,29 @@ a.pagination-item:hover {
     transform: translateX(-240px);
   }
 
-  .find-coating-form {
+  .find-product-form {
     flex-direction: column;
   }
 
-  .coating-items-listing {
+  .product-items-listing {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .search-items-results .coating-items-listing {
+  .search-items-results .product-items-listing {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
 @media screen and (max-width: 480px) {
-  .find-coating-inputs > div {
+  .find-product-inputs > div {
     width: 100%;
   }
 
-  .coating-items-listing {
+  .product-items-listing {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
-  .search-items-results .coating-items-listing {
+  .search-items-results .product-items-listing {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
